src/Skewb.css
body {
    margin: 0;
}

.app {
    padding: 12px;
}

.app.dark-mode {
    background-color: rgb(32, 32, 32);
    color: white;
}

.app.dark-mode a {
    color: rgb(188, 188, 255)
}

.app.dark-mode a:visited {
    color: rgb(239, 188, 255)
}

button {
    display: block;
    padding: 5px;
    cursor: pointer;
    border: 1px solid gray;
    border-radius: 5px;
}

button.error {
    color: red;
    background-color: rgb(255, 228, 233);
}

button.correct-flash {
    color: rgb(19, 80, 0);
    background-color: rgb(201, 255, 196);
}

.app.dark-mode button {
    color: white;
    background-color: rgb(32, 32, 32);
}

.app.dark-mode button.error {
    color: rgb(255, 228, 233);
    background-color: rgb(99, 0, 0);
}

.app.dark-mode button.correct-flash {
    color: rgb(201, 255, 196);
    background-color: rgb(19, 80, 0);
}

.app.dark-mode button:disabled {
    background-color: rgb(46, 46, 46);
    color: rgb(158, 158, 158);
}

.toolbar {
    display: flex;
    gap: 5px;
}

.toolbar > .toolbar-title {
    margin-top: 10px;
    margin-bottom: 10px;
}

.toolbar > .toolbar-buttons {
    display: flex;
    gap: 5px;
    flex: 1 0 auto;
    justify-content: right;
}

.toolbar > .toolbar-buttons {
    height: 2em;
    align-self: center;
}


.trainer-box {
    display: flex;
    flex-wrap: wrap;
    gap: 100px;
    align-content: space-around;
}

.trainer {
    flex: 0 1 630px;
    display: flex;
}

.trainer-left {
    flex: 0 1 500px;
}

.trainer.center > .trainer-right {
    flex: 0 0 auto;
}

.trainer.corner > .trainer-right {
    flex: 0 0 130px;
}

.trainer-info {
    flex: 1 0 300px;
}


.skewb-box {
    /* border: solid; */
    padding: 0;
}

.trainer-right .perm-buttons {
    display: flex;
}

.trainer-right.up-down .pi-buttons {
    display: flex;
    flex-wrap: wrap;
    gap: 20px;
}

.trainer-right.up-down .pi-buttons button {
    display: block;
    width: calc(50% - 20px);
    aspect-ratio: 1;
    cursor: pointer;
}

.trainer-right.up-down .peanut-buttons {
    display: flex;
    gap: 5px;
}

.trainer-right.up-down .peanut-buttons div {
    flex-grow: 1;
    display: flex;
    flex-direction: column;
    justify-content: center;
}

.trainer-right.up-down .peanut-buttons button {
    display: block;
    aspect-ratio: 1;
    width: 100%;
    cursor: pointer;
    margin-bottom: 5px;
}

.trainer-right.sideways .pi-buttons {
    display: flex;
    gap: 5px;
}

.trainer-right.sideways .pi-buttons > div {
    flex-grow: 1;
    display: flex;
    flex-direction: column;
    justify-content: center;
}

.trainer-right.sideways .pi-buttons > .side-buttons {
    gap: 10px;
}

.trainer-right.sideways .pi-buttons > div > button {
    display: block;
    aspect-ratio: 1;
    width: 100%;
    cursor: pointer;
    margin-bottom: 5px;
}

.trainer-right.sideways .peanut-buttons {
    display: flex;
    gap: 10px;
}

.trainer-right.sideways .peanut-buttons div {
    width: calc(50% - 20px);
    display: flex;
    gap: 10px;
    flex-direction: column;
}

.trainer-right.sideways .peanut-buttons button {
    display: block;
    width: 100%;
    aspect-ratio: 1;
    cursor: pointer;
}

img.wat-img {
    height: 2em;
}

